# jezeniel.github.io

./: .gitignore  404.html  Gemfile  Makefile  README.md  Rakefile  _config.yml  archives.html  authors.html  categories.html  feed.xml  index.html  package-lock.json  package.json  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  tags.html
about/: index.html
author/: jezeniel-zapanta.html
blog/: index.html
content/blog/: 2018-07-14-hello-world.markdown  2019-08-29-why-i-use-vim.markdown  2019-09-01-why-i-use-vim.markdown  2019-09-03-why-i-use-vim.markdown  2019-12-17-moving-back.md  2021-03-20-what-a-challenging-year.md
content/pages/: 404.md  about.md  projects.md
css/: main.css
drafts/: why-i-use-vim.html
icons/: index.html
projects/: index.html
source/: 404.html  about.md  index.html  projects.md
source/_includes/: article.html  head.html  header.html  social.html
source/_layouts/: page.html  post.html
source/_posts/: 2018-07-14-hello-world.markdown
source/_sass/: _variables.sass  main.sass
source/_sass/base/: _blockquotes.sass  _typography.sass
source/_sass/end2end/: _articles.sass  _header.sass  _social.sass  _syntax.sass
source/blog/: index.html
tag/: personal.html
theme/.sass-cache/0527fec48b0112095c6913cb30db959134626888/: _bourbon-deprecated-upcoming.scssc  _bourbon.scssc
theme/.sass-cache/41d819c39a123809ff1da6732f3c3ad224bd9940/: _mixins.sassc  _normalize.scssc  _placeholders.sassc  _variables.sassc  main.sassc
theme/css/: main.css  main.css.map  style.css  style.css.map
themes/end2end/_sass/: main.sass  (+2 more)
(+115 files in other folders)
