[tool.poetry]
name = "jezeniel.github.io"
version = "0.1.0"
description = "My personal website."
authors = ["Jezeniel Zapanta <jezeniel.zapanta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Markdown = "^3.1.1"
ghp-import = "^0.5.5"
pelican = "^4.1.1"
typogrify = "^2.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
